Order extension list

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "andre-nascimento-java-spring-extension-pack",
 	"displayName": "Andre Nascimento Java Spring Extension Pack",
 	"description": "Pacote de Extensões para usar Java e Spring no VSCode",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"engines": {
 		"vscode": "^1.85.0"
 	},
@@ -11,24 +11,24 @@
 	],
 	"extensionPack": [
 		"charurajput.shadesofspring",
+		"josevseb.google-java-format-for-vs-code",
+		"rctay.karma-problem-matcher",
+		"redhat.fabric8-analytics",
 		"redhat.java",
+		"redhat.vscode-community-server-connector",
+		"redhat.vscode-rsp-ui",
+		"redhat.vscode-xml",
+		"redhat.vscode-yaml",
 		"shengchen.vscode-checkstyle",
 		"visualstudioexptteam.intellicode-api-usage-examples",
+		"visualstudioexptteam.vscodeintellicode",
+		"vmware.vscode-spring-boot",
 		"vscjava.vscode-java-debug",
 		"vscjava.vscode-java-dependency",
 		"vscjava.vscode-java-test",
 		"vscjava.vscode-maven",
-		"visualstudioexptteam.vscodeintellicode",
-		"vmware.vscode-spring-boot",
 		"vscjava.vscode-spring-boot-dashboard",
-		"vscjava.vscode-spring-initializr",
-		"josevseb.google-java-format-for-vs-code",
-		"rctay.karma-problem-matcher",
-		"redhat.fabric8-analytics",
-		"redhat.vscode-community-server-connector",
-		"redhat.vscode-rsp-ui",
-		"redhat.vscode-xml",
-		"redhat.vscode-yaml"
+		"vscjava.vscode-spring-initializr"
 	],
 	"publisher": "andre-s-nascimento",
 	"icon": "logo.png",
